Started factoring to make the models more clear and more strict