@@ -21,6 +21,7 @@ import com.castlemock.model.core.ServiceTask;
 import com.castlemock.model.core.user.Role;
 import com.castlemock.model.core.user.Status;
 import com.castlemock.model.core.user.User;
+import com.castlemock.model.core.user.UserTestBuilder;
 import com.castlemock.repository.user.UserRepository;
 import com.castlemock.service.core.user.input.ReadUsersByRoleInput;
 import com.castlemock.service.core.user.output.ReadUsersByRoleOutput;
@@ -54,27 +55,28 @@ public class ReadUsersByRoleServiceTest {
 
     @Test
     public void testProcess(){
-        List<User> users = new ArrayList<User>();
-        User user = new User();
-        user.setId("123");
-        user.setUsername("Username");
-        user.setStatus(Status.ACTIVE);
-        user.setRole(Role.ADMIN);
-        user.setEmail("email@email.com");
+        final List<User> users = new ArrayList<User>();
+        final User user = UserTestBuilder.builder()
+            .id("123")
+            .username("Username")
+            .status(Status.ACTIVE)
+            .role(Role.ADMIN)
+            .email("email@email.com")
+            .build();
+
         users.add(user);
 
 
         Mockito.when(repository.findAll()).thenReturn(users);
         final ReadUsersByRoleInput input = new ReadUsersByRoleInput(Role.ADMIN);
-        final ServiceTask<ReadUsersByRoleInput> serviceTask = new ServiceTask<ReadUsersByRoleInput>();
-        serviceTask.setInput(input);
+        final ServiceTask<ReadUsersByRoleInput> serviceTask = ServiceTask.of(input, "user");
         final ServiceResult<ReadUsersByRoleOutput> serviceResult = service.process(serviceTask);
         final ReadUsersByRoleOutput output = serviceResult.getOutput();
 
         final List<User> returnedUsers = output.getUsers();
         Assert.assertNotNull(returnedUsers);
         Assert.assertEquals(users.size(), returnedUsers.size());
-        final User returnedUser = returnedUsers.get(0);
+        final User returnedUser = returnedUsers.getFirst();
         Assert.assertEquals(user.getId(), returnedUser.getId());
         Assert.assertEquals(user.getEmail(), returnedUser.getEmail());
         Assert.assertEquals(user.getRole(), returnedUser.getRole());
